--- a/main.html
+++ b/main.html
@@ -7,7 +7,26 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h2>Feedback Form</h2>
+	<form>
+		<div>
+			<label for="name">Name:</label><br>
+			<input type="text" id="name" minlenth="3" maxlength="50"><br>
+		</div>
+		<div>
+			<label for="portfolio">Portfolio:</label><br>
+			<input type="url" id="portfolio" required><br>
+		</div>
+		<div>
+			<label for="favColor">Fav Color:</label><br>
+			<input type="color" id="favColor"><br>
+		</div>
+		<div>
+			<label for="likeness">Likeness:</label><br>
+			<input type="range" id="likeness"><br>
+		</div>
+		<input type="submit" value="Submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
