--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<h2>Feedback Form</h2>
-	<form>
+	<form method="post">
 		<div>
 			<label for="name">Name:</label><br>
-			<input type="text" id="name" minlenth="3" maxlength="50"><br>
+			<input type="text" id="name" minlenth="3" maxlength="50" required><br>
 		</div>
 		<div>
 			<label for="portfolio">Portfolio:</label><br>
