--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<form method="post">
 		<div>
 			<label for="name">Name:</label><br>
-			<input type="text" id="name" minlenth="3" maxlength="50" required><br>
+			<input type="text" id="name" minlength="3" maxlength="50" required><br>
 		</div>
 		<div>
 			<label for="portfolio">Portfolio:</label><br>
