--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 		</div>
 		<div>
 			<label for="likeness">Likeness:</label><br>
-			<input type="range" id="likeness"><br>
+			<input type="range" id="likeness" min="1" max="100" required><br>
 		</div>
 		<input type="submit" value="Submit">
 	</form>
